--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hi Margaret, its Jonathan :)</h1>
+    <p1>I am currently at work right now and made this website so I could make you a message board. Also Wekcome to my website!</p1>
 </body>
 </html>
